debugging browser dependencies

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@ TODO:
   </head>
 
   <body>
+    <style>
+.HAIKU_DIV {
+  text-align: center;
+}
+    </style>
 
     <!--
     <link rel="import" href="haiku.html">
@@ -139,7 +144,7 @@ Tradución necesario.
 <li class="haiku" id="Gujarati">
 અનુવાદ જરૂર છે.
 </li>
-<li class="haiku" id="Haitian Creole">
+<li class="haiku" id="Haitian_Creole">
 Tradiksyon nesesè.
 </li>
 <li class="haiku" id="Hausa">
@@ -192,7 +197,7 @@ Traduzione necessario.
 <li class="haiku" id="Korean">
 번역이 필요합니다.
 </li>
-<li class="haiku" id="Kurdish (Kurmanji)">
+<li class="haiku" id="Kurdish_(Kurmanji)">
 Werger pêwîst.
 </li>
 <li class="haiku" id="Kyrgyz">
@@ -236,7 +241,7 @@ Translation hiahiatia.
 <li class="haiku" id="Mongolian">
 Орчуулга хэрэгтэй.
 </li>
-<li class="haiku" id="Myanmar (Burmese)">
+<li class="haiku" id="Myanmar_(Burmese)">
 ဘာသာပြန်ချက်လိုအပ်ခဲ့ပါတယ်။
 </li>
 <li class="haiku" id="Nepali">
@@ -269,7 +274,7 @@ E nevoie de traducere.
 <li class="haiku" id="Samoan">
 manaomia Faaliliuga.
 </li>
-<li class="haiku" id="Scots Gaelic">
+<li class="haiku" id="Scots_Gaelic">
 Eadar-theangachadh a dhìth.
 </li>
 <li class="haiku" id="Serbian">
@@ -365,7 +370,7 @@ Labahumushi lalidinga abantu.
           </div>
         </header>
 
-        <div      id="HAIKU_DIV" align="center">  <!-- TODO fix CSS align -->
+        <div      id="HAIKU_DIV">  <!-- TODO fix CSS align -->
           <table  id="HAIKU_BOX"><tr>
               <td id="HAIKU_TXT"></td> <!-- Translation text here -->
           </tr></table>
