--- a/index.html
+++ b/index.html
@@ -395,23 +395,23 @@ Labahumushi lalidinga abantu.
       </div>
     </footer>
 
-    <script type="text/javascript" language="Javascript" src=
+    <script type="text/javascript" src=
 "https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js">
     </script>
 
-    <script type="text/javascript" language="Javascript" src=
+    <script type="text/javascript" src=
 "https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js">
     </script>
 
-    <script type="text/javascript" language="Javascript" src=
+    <script type="text/javascript" src=
 "https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js">
     </script>
 
-    <script type="text/javascript" language="Javascript" src=
+    <script type="text/javascript" src=
 "https://cdnjs.cloudflare.com/ajax/libs/require.js/2.2.0/require.min.js">
     </script>
 
-    <script type="text/javascript" language="Javascript" src=
+    <script type="text/javascript" src=
 "index.js">
     </script>
 
