debugging browser dependencies

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ Labahumushi lalidinga abantu.
 
         <header>
           <div id="TITLE_DIV">
-            <b id="TITLE_TXT">Haiku (jlettvin@gmail.com)</b><!-- Title here -->
+            <h6 id="TITLE_TXT">Haiku (jlettvin@gmail.com)</h6><!-- Title here -->
           </div>
         </header>
 
