Improved browser specializations

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ Labahumushi lalidinga abantu.
             Hover on a language to show a translation.
             Click on a language to make it the default
           </i>
-          <i id="BROWSER"></i>
+          <i id="BROWSER">This browser doesn't support this code.</i>
         </div>
       </article>
     </section>
