Improved browser specializations

--- a/index.html
+++ b/index.html
@@ -380,7 +380,9 @@ Labahumushi lalidinga abantu.
 
     <section>
       <article>
-        <div class="MENU"></div> <!-- MENU appears here -->
+        <div class="MENU">
+          This browser doesn't support this code.
+        </div> <!-- MENU appears here -->
       </article>
     </section>
 
