Improved browser specializations

--- a/index.html
+++ b/index.html
@@ -373,16 +373,14 @@ Labahumushi lalidinga abantu.
             Hover on a language to show a translation.
             Click on a language to make it the default
           </i>
-          <i id="BROWSER">This browser doesn't support this code.</i>
+          <i id="BROWSER"><br />This browser doesn't support this code.</i>
         </div>
       </article>
     </section>
 
     <section>
       <article>
-        <div class="MENU">
-          This browser doesn't support this code.
-        </div> <!-- MENU appears here -->
+        <div class="MENU"></div> <!-- MENU appears here -->
       </article>
     </section>
 
