Improved browser specializations

--- a/index.html
+++ b/index.html
@@ -369,13 +369,7 @@ Labahumushi lalidinga abantu.
           <table  id="HAIKU_BOX"><tr>
               <td id="HAIKU_TXT"></td> <!-- Translation text here -->
           </tr></table>
-          <i id="DIRECTIONS">
-            Hover on a language to show a translation.
-            Click on a language to make it the default
-          </i>
-          <!--
-          <i id="BROWSER"><br />This browser doesn't support this code.</i>
-          -->
+          <i id="DIRECTIONS">This browser doesn't support this code.</i>
         </div>
       </article>
     </section>
