Improved browser specializations

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@ Labahumushi lalidinga abantu.
           <table  id="HAIKU_BOX"><tr>
               <td id="HAIKU_TXT"></td> <!-- Translation text here -->
           </tr></table>
-          <i id="DIRECTIONS">This browser doesn't support this code.</i>
+          <i id="DIRECTIONS">This browser doesn't support this haiku.</i>
         </div>
       </article>
     </section>
