Make cross-browser experience better

--- a/index.html
+++ b/index.html
@@ -367,9 +367,13 @@ Labahumushi lalidinga abantu.
 
         <div      id="HAIKU_DIV">  <!-- TODO fix CSS align -->
           <table  id="HAIKU_BOX"><tr>
-              <td id="HAIKU_TXT"></td> <!-- Translation text here -->
+              <td id="HAIKU_TXT">
+                This browser doesn't support this haiku.<br />
+                Try one of these tested browsers.<br />
+                [opera, google chrome, firefox, microsoft edge, apple safari]
+              </td> <!-- Translation text here -->
           </tr></table>
-          <i id="DIRECTIONS">This browser doesn't support this haiku.</i>
+          <i id="DIRECTIONS"></i>
         </div>
       </article>
     </section>
