--- a/index.html
+++ b/index.html
@@ -370,7 +370,8 @@ Labahumushi lalidinga abantu.
               <td id="HAIKU_TXT">
                 This browser doesn't support this haiku.<br />
                 Try one of these tested browsers.<br />
-                [opera, google chrome, firefox, microsoft edge, apple safari]
+                [opera, google chrome, firefox,<br />
+                microsoft edge, apple safari]
               </td> <!-- Translation text here -->
           </tr></table>
           <i id="DIRECTIONS"></i>
