Improved browser handling

--- a/index.html
+++ b/index.html
@@ -370,8 +370,13 @@ Labahumushi lalidinga abantu.
               <td id="HAIKU_TXT">
                 This browser doesn't support this haiku.<br />
                 Try one of these tested browsers.<br />
-                [opera, google chrome, firefox,<br />
-                microsoft edge, apple safari]
+                <pre>
+opera
+google chrome
+firefox
+microsoft edge
+apple safari
+                </pre>
               </td> <!-- Translation text here -->
           </tr></table>
           <i id="DIRECTIONS"></i>
