Improved browser handling

--- a/index.html
+++ b/index.html
@@ -368,9 +368,10 @@ Labahumushi lalidinga abantu.
         <div      id="HAIKU_DIV">  <!-- TODO fix CSS align -->
           <table  id="HAIKU_BOX"><tr>
               <td id="HAIKU_TXT">
-                This browser doesn't support this haiku.<br />
-                Try one of these tested browsers.<br />
-                <pre>
+<pre>
+This browser doesn't support this haiku.
+Try one of these tested browsers:
+
 opera
 google chrome
 firefox
