Improved browser handling

--- a/index.html
+++ b/index.html
@@ -356,8 +356,8 @@ Labahumushi lalidinga abantu.
   </nav>
 </header>
 
-    <section>
-      <article>
+    <section><header></header>
+      <article><header></header>
 
         <header>
           <div id="TITLE_DIV">
@@ -385,8 +385,8 @@ apple safari
       </article>
     </section>
 
-    <section>
-      <article>
+    <section><header></header>
+      <article><header></header>
         <div class="MENU"></div> <!-- MENU appears here -->
       </article>
     </section>
