Improved browser handling

--- a/index.html
+++ b/index.html
@@ -356,8 +356,8 @@ Labahumushi lalidinga abantu.
   </nav>
 </header>
 
-    <section><header></header>
-      <article><header></header>
+    <section><h5></h5>
+      <article><h6></h6>
 
         <header>
           <div id="TITLE_DIV">
@@ -385,8 +385,8 @@ apple safari
       </article>
     </section>
 
-    <section><header></header>
-      <article><header></header>
+    <section><h5></h5>
+      <article><h6></h6>
         <div class="MENU"></div> <!-- MENU appears here -->
       </article>
     </section>
