Improved resource separation

--- a/index.html
+++ b/index.html
@@ -414,6 +414,10 @@ apple safari
     </script>
 
     <script type="text/javascript" src=
+"haiku.js">
+    </script>
+
+    <script type="text/javascript" src=
 "index.js">
     </script>
 
