Code comment improvements

--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
 
         <header>
           <div id="TITLE_DIV">
-            <h6 id="TITLE_TXT">Haiku (jlettvin@gmail.com)</h6><!-- Title here -->
+            <h6 id="TITLE_TXT">
+              Haiku (jlettvin@gmail.com) <!-- Title replaces this text -->
+            </h6>
           </div>
         </header>
 
-        <div      id="HAIKU_DIV">  <!-- TODO fix CSS align -->
+        <div      id="HAIKU_DIV">
           <table  id="HAIKU_BOX"><tr>
               <td id="HAIKU_TXT">
 <pre>
@@ -36,8 +38,8 @@ google chrome
 firefox
 microsoft edge
 apple safari
-                </pre>
-              </td> <!-- Translation text here -->
+</pre> <!-- Translation replaces this text -->
+              </td>
           </tr></table>
           <i id="DIRECTIONS"></i>
         </div>
@@ -46,7 +48,7 @@ apple safari
 
     <section>
       <article>
-        <div class="MENU"></div> <!-- MENU appears here -->
+        <div class="MENU">Browser fail</div> <!-- MENU replaces this text -->
       </article>
     </section>
 
