Added HTML comments

--- a/index.html
+++ b/index.html
@@ -58,26 +58,32 @@ apple safari
       </div>
     </footer>
 
+    <!-- Unused browser invariance capabilities -->
     <script type="text/javascript" src=
 "https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js">
     </script>
 
+    <!-- Accessors and functions -->
     <script type="text/javascript" src=
 "https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js">
     </script>
 
+    <!-- Accessors and functions -->
     <script type="text/javascript" src=
 "https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js">
     </script>
 
+    <!-- Functions for Identity and comparison -->
     <script type="text/javascript" src=
 "https://cdnjs.cloudflare.com/ajax/libs/is_js/0.8.0/is.min.js">
     </script>
 
+    <!-- Translations for haiku -->
     <script type="text/javascript" src=
 "haiku.js">
     </script>
 
+    <!-- Functions to control display -->
     <script type="text/javascript" src=
 "index.js">
     </script>
