Obeyed CSS lint rules

--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
       <article>
 
         <header>
-          <div id="TITLE_DIV">
-            <h6 id="TITLE_TXT">
+          <div class="TITLE_DIV">
+            <h6 class="TITLE_TXT">
               Haiku (jlettvin@gmail.com) <!-- Title replaces this text -->
             </h6>
           </div>
         </header>
 
-        <div      id="HAIKU_DIV">
-          <table  id="HAIKU_BOX"><tr>
-              <td id="HAIKU_TXT">
+        <div      class="HAIKU_DIV">
+          <table  class="HAIKU_BOX"><tr>
+              <td class="HAIKU_TXT">
 <pre>
 This browser doesn't support this haiku.
 Try one of these tested browsers:
@@ -41,7 +41,7 @@ apple safari
 </pre> <!-- Translation replaces this text -->
               </td>
           </tr></table>
-          <i id="DIRECTIONS"></i>
+          <i class="DIRECTIONS"></i>
         </div>
       </article>
     </section>
@@ -53,7 +53,7 @@ apple safari
     </section>
 
     <footer>
-      <div id="LEGAL">
+      <div class="LEGAL">
         Copyright&copy; 2016 Jonathan D. Lettvin, All Rights Reserved
       </div>
     </footer>
