--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@ apple safari
 
     <!-- Translations for haiku -->
     <script type="text/javascript" src=
+"wiki.js">
+    </script>
+
+    <!-- Translations for haiku -->
+    <script type="text/javascript" src=
 "haiku.js">
     </script>
 
