Cleanup and markdown demos

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div      class="HAIKU_DIV">
           <table  class="HAIKU_BOX"><tr>
               <td class="HAIKU_TXT">
-<pre>
+<b>
 This browser doesn't support this haiku.
 Try one of these tested browsers:
 
@@ -38,7 +38,7 @@ google chrome
 firefox
 microsoft edge
 apple safari
-</pre> <!-- Translation replaces this text -->
+</b> <!-- Translation replaces this text -->
               </td>
           </tr></table>
           <i class="DIRECTIONS"></i>
@@ -76,6 +76,10 @@ apple safari
     <!-- Functions for Identity and comparison -->
     <script type="text/javascript" src=
 "https://cdnjs.cloudflare.com/ajax/libs/is_js/0.8.0/is.min.js">
+    </script>
+
+    <script type="text/javascript" src=
+"http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
     </script>
 
     <!-- Translations for haiku -->
