New haiku and slight format change.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>Haiku (jlettvin@gmail.com)</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Begin transitioning to w3.css
+    http://www.w3schools.com/css/css_rwd_frameworks.asp
+    <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+    -->
     <link rel="stylesheet" href="index.css">
+
+    <title>Haiku (jlettvin@gmail.com)</title>
   </head>
 
   <body>
@@ -18,11 +25,11 @@
     <section>
       <article>
 
-        <header>
+        <header class="flex-container">
           <div class="TITLE_DIV">
-            <h6 class="TITLE_TXT">
+            <b class="TITLE_TXT">
               Haiku (jlettvin@gmail.com) <!-- Title replaces this text -->
-            </h6>
+            </b>
           </div>
         </header>
 
